@@ -1,3 +1,10 @@
+2015-10-30 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* sdas/linksrc/lkarea.c:
+	* sdas/linksrc/lkmem.c:
+	  Improve the error message in .mem when no enough space for the stack.
+	  Suggest the largest spare space (address and size) in the internal RAM.
+
 2015-10-28 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* sdas/linksrc/lkmem.c:
